src/test/deca/context/valid/created/ifelse.deca
{
    boolean a = true;
    if(a){

    }
    else{
        
    }
}