src/test/deca/context/invalid/created/test-a-8.deca
class A{
    int x;
    void setX(int a){
        x = a;
    }
}

{
    A a = new A();
    a.setX(true);
}